--- a/css/style.sass
+++ b/css/style.sass
@@ -63,8 +63,8 @@ a:hover
     position: absolute
 
 .sidebar
-    position: absolute
-    right: -50vh
+    position: fixed
+    right: -110vw
     top: 0
     transition: right 0.5s
 
@@ -76,10 +76,12 @@ a:hover
     justify-content: space-evenly
     align-items: center
     height: 100vh
-    padding: 0em 5em 50em 10em
+    width: 35vw
+
+    padding: 1em 1em 10em 1em
 
 .sidebar.active
-    right: 0
+    right: -5vw
 
 .home-container
     position: relative
@@ -96,11 +98,14 @@ a:hover
 
 #canvas 
     position: absolute
-    bottom: -250px
+    bottom: -300px
     left: 0
 
 .works
     padding: 2.5em 3em
+
+footer .social-media a:hover
+    text-decoration: none
 
 @media (min-width: 900px)
     .sidebar-container
