--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,13 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,500;1,700&display=swap");
 * {
   margin: 0;
   paddin: 0;
   position: relative;
+  font-family: 'Montserrat', sans-serif;
 }
 
 header, footer {
-  background-color: #F2E422;
+  background-color: #fffea6;
   padding: 1em 2.5em;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -16,15 +18,17 @@ header, footer {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-shadow: 0px 0px 5px 2.5px #d3d168be;
+          box-shadow: 0px 0px 5px 2.5px #d3d168be;
 }
 
 header {
   height: 3em;
-  z-index: 100;
+  z-index: 75;
 }
 
 main {
-  background-color: #F32827;
+  background-color: #ffffff;
 }
 
 ul {
@@ -47,21 +51,28 @@ a:hover {
 
 .button {
   padding: 0.5em 0.25em;
-  border: 1px solid white;
+  border: 1px solid black;
   border-radius: 0.25em;
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
-  color: white;
+  color: black;
   text-align: center;
-  font-size: 1.5rem;
-  background-color: rgba(150, 150, 150, 0);
-  -webkit-transition: background-color 0.5;
-  transition: background-color 0.5;
+  font-size: 1.25rem;
+  background-color: #fffea6;
+  -webkit-transition: background-color 0.15s;
+  transition: background-color 0.15s;
 }
 
 .button:hover {
-  background-color: rgba(150, 150, 150, 0.5);
+  background-color: #fffea6;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.logo-container a {
+  font-style: normal;
+  text-decoration: none;
 }
 
 .header-links {
@@ -75,7 +86,7 @@ a:hover {
   top: 0;
   -webkit-transition: right 0.5s;
   transition: right 0.5s;
-  background: #F2E422;
+  background: #fffea6;
   border-left: 1px solid #000;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -122,10 +133,48 @@ a:hover {
 
 .works {
   padding: 2.5em 3em;
+  background-color: #fffea6;
 }
 
 footer .social-media a:hover {
   text-decoration: none;
+}
+
+.builder-main {
+  padding: 1.5em 2em;
+}
+
+.burger-container {
+  border: 1px solid black;
+  background-color: white;
+  border-radius: 10px;
+  text-align: center;
+  padding: 1.5em;
+  margin-bottom: 1em;
+}
+
+.buttons-container {
+  margin-left: 5em;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (minmax(10em, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(10em, 1fr));
+  -webkit-column-gap: 1em;
+          column-gap: 1em;
+  row-gap: 1em;
+}
+
+.restart-container, .order-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+.restart-container button, .order-container button {
+  width: 50vw;
+  margin-top: 1em;
 }
 
 @media (min-width: 900px) {
@@ -152,5 +201,56 @@ footer .social-media a:hover {
   footer .links-footer {
     text-align: center;
   }
+}
+
+.modal {
+  z-index: 90;
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  visibility: hidden;
+  -webkit-backdrop-filter: blur(3px);
+          backdrop-filter: blur(3px);
+  -webkit-transition: -webkit-backdrop-filter 0.3s;
+  transition: -webkit-backdrop-filter 0.3s;
+  transition: backdrop-filter 0.3s;
+  transition: backdrop-filter 0.3s, -webkit-backdrop-filter 0.3s;
+}
+
+.modal.active {
+  visibility: visible;
+}
+
+.modal-container {
+  z-index: 100;
+  border: 0.01em solid black;
+  border-radius: 10px;
+  background-color: #fffea6;
+  -webkit-box-shadow: inset 0px 0px 5px 2.5px #c0bf6bbe;
+          box-shadow: inset 0px 0px 5px 2.5px #c0bf6bbe;
+  padding: 1em;
+  height: 15em;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
 }
 /*# sourceMappingURL=style.css.map */
