--- a/css/style.sass
+++ b/css/style.sass
@@ -1,14 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,500;1,700&display=swap')
+
 $font-color: #000
-$background: #F32827
-$darker-background: #F2E422
+$background: #ffffff 
+$darker-background: #fffea6 
 $header-height: 3em
 
 * 
     margin: 0
     paddin: 0
     position: relative
-
-
+    font-family: 'Montserrat', sans-serif
 
 header, footer
     background-color: $darker-background
@@ -16,10 +17,11 @@ header, footer
     display: flex
     justify-content: space-between
     align-items: center
+    box-shadow: 0px 0px 5px 2.5px #d3d168be
 
 header
     height: $header-height
-    z-index: 100
+    z-index: 75
 
 main
     background-color: $background
@@ -38,8 +40,8 @@ a:hover
     cursor: pointer
 
 .button
-    $button-color: white
-    $button-font: 1.5rem
+    $button-color: black
+    $button-font: 1.25rem
 
     padding: 0.5em 0.25em
     border: 1px solid $button-color
@@ -50,12 +52,17 @@ a:hover
     text-align: center
     font-size: $button-font
 
-    background-color: rgba(150, 150, 150, 0)
-    transition: background-color 0.5
+    background-color: $darker-background
+    transition: background-color 0.15s
 
 .button:hover
-    background-color: rgba(150, 150, 150, 0.5)
+    background-color: $darker-background
+    text-decoration: none
+    cursor: pointer
 
+.logo-container a
+    font-style: normal
+    text-decoration: none
 
 //smaller screens
 .header-links
@@ -103,10 +110,39 @@ a:hover
 
 .works
     padding: 2.5em 3em
+    background-color: $darker-background
 
 footer .social-media a:hover
     text-decoration: none
 
+
+//BUILDER PAGE
+.builder-main
+    padding: 1.5em 2em
+
+.burger-container
+    border: 1px solid black
+    background-color: white
+    border-radius: 10px
+    text-align: center
+    padding: 1.5em
+    margin-bottom: 1em
+
+.buttons-container
+    margin-left: 5em
+    display: grid
+    grid-template-columns: repeat(auto-fit, minmax(10em, 1fr))
+    column-gap: 1em
+    row-gap: 1em
+
+.restart-container, .order-container
+    display: flex
+    justify-content: space-around
+    button
+        width: 50vw
+        margin-top: 1em
+
+//MEDIA QUERIES
 @media (min-width: 900px)
     .sidebar-container
         visibility: hidden
@@ -122,3 +158,38 @@ footer .social-media a:hover
             margin-bottom: 1em
         .links-footer
             text-align: center
+
+//POP UP
+.modal
+    z-index: 90
+
+    position: absolute
+    width: 100vw
+    height: 100vh
+    
+    display: flex
+    justify-content: center
+    align-items: center
+
+    visibility: hidden
+    backdrop-filter: blur(3px)
+    transition: backdrop-filter 0.3s
+
+.modal.active
+    visibility: visible
+
+.modal-container
+    z-index: 100
+    
+    border: 0.01em solid black
+    border-radius: 10px
+    background-color: $darker-background
+    box-shadow: inset 0px 0px 5px 2.5px #c0bf6bbe
+
+    padding: 1em
+    height: 15em
+
+    display: flex
+    flex-direction: column
+    align-items: center
+    justify-content: space-evenly
