--- a/css/style.css
+++ b/css/style.css
@@ -144,13 +144,19 @@ footer .social-media a:hover {
   padding: 1.5em 2em;
 }
 
-.burger-container {
+.builder-container {
+  position: relative;
+  width: 95vw;
+  height: 50vh;
+  overflow: hidden;
   border: 1px solid black;
-  background-color: white;
   border-radius: 10px;
-  text-align: center;
-  padding: 1.5em;
   margin-bottom: 1em;
+}
+
+.builder-container canvas {
+  position: absolute;
+  bottom: -3.5em;
 }
 
 .buttons-container {
