--- a/css/style.sass
+++ b/css/style.sass
@@ -7,7 +7,7 @@ $header-height: 3em
 
 * 
     margin: 0
-    paddin: 0
+    padding: 0
     position: relative
     font-family: 'Montserrat', sans-serif
 
