4th try (moved builder to main page)

--- a/css/style.sass
+++ b/css/style.sass
@@ -169,7 +169,9 @@ footer .social-media a:hover
 .modal
     z-index: 90
 
-    position: absolute
+    position: fixed
+    bottom: 0
+    right: 0
     width: 100vw
     height: 100vh
     
