--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 }
 
 header, footer {
-  background-color: #fffea6;
+  background-color: #f8e21d;
   padding: 1em 2.5em;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -18,8 +18,8 @@ header, footer {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-shadow: 0px 0px 5px 2.5px #d3d168be;
-          box-shadow: 0px 0px 5px 2.5px #d3d168be;
+  -webkit-box-shadow: 0px 0px 5px 2.5px #f2c230;
+          box-shadow: 0px 0px 5px 2.5px #f2c230;
 }
 
 header {
@@ -28,11 +28,17 @@ header {
 }
 
 main {
-  background-color: #ffffff;
+  background-color: #F23827;
 }
 
 ul {
   list-style-type: none;
+}
+
+.title {
+  background: -webkit-linear-gradient(#f8e21d, #f2c230);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 a {
@@ -59,13 +65,12 @@ a:hover {
   color: black;
   text-align: center;
   font-size: 1.25rem;
-  background-color: #fffea6;
+  background-color: #f8e21d;
   -webkit-transition: background-color 0.15s;
   transition: background-color 0.15s;
 }
 
 .button:hover {
-  background-color: #fffea6;
   text-decoration: none;
   cursor: pointer;
 }
@@ -86,7 +91,7 @@ a:hover {
   top: 0;
   -webkit-transition: right 0.5s;
   transition: right 0.5s;
-  background: #fffea6;
+  background: #f8e21d;
   border-left: 1px solid #000;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -133,12 +138,18 @@ a:hover {
 
 .works {
   padding: 2.5em 3em;
-  background-color: #fffea6;
-  -webkit-box-shadow: 0px 0px 5px 2.5px #d3d168be;
-          box-shadow: 0px 0px 5px 2.5px #d3d168be;
+  background-color: #F23827;
+  -webkit-box-shadow: 0px 0px 5px 2.5px #c42f22;
+          box-shadow: 0px 0px 5px 2.5px #c42f22;
+}
+
+.works .title {
+  margin: 0 0 1em 0;
 }
 
 .works .works-container {
+  background-color: #f8e21d;
+  border-radius: 1em;
   padding: 2.5em 3em;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -171,8 +182,17 @@ footer .social-media a:hover {
   text-decoration: none;
 }
 
+.builder-section {
+  padding-top: 1em;
+  background-color: #F23827;
+  -webkit-box-shadow: 0px 0px 7px 5px #c42f22;
+          box-shadow: 0px 0px 7px 5px #c42f22;
+}
+
 .builder-main {
-  padding: 1.5em 2em;
+  background-color: #F23827;
+  display: block;
+  padding: 1.5em;
 }
 
 .builder-container {
@@ -245,7 +265,7 @@ footer .social-media a:hover {
   z-index: 100;
   border: 0.01em solid black;
   border-radius: 10px;
-  background-color: #fffea6;
+  background-color: #f8e21d;
   -webkit-box-shadow: inset 0px 0px 5px 2.5px #c0bf6bbe;
           box-shadow: inset 0px 0px 5px 2.5px #c0bf6bbe;
   padding: 1em;
@@ -263,11 +283,6 @@ footer .social-media a:hover {
   -webkit-box-pack: space-evenly;
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
-}
-
-.builder-main {
-  display: block;
-  background-color: white;
 }
 
 @media (min-width: 900px) {
